--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div class="absolute w-full h-full" id="modal"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
