added theme switcher

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tracer Core</title>
   </head>
-  <body id="fullscreen">
+  <body className="dark" id="fullscreen">
     <div id="root"></div>
     <div class="absolute z-0 w-full h-full" id="modal"></div>
     <script type="module" src="/src/main.tsx"></script>
