reconfigured eslint, updated images

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/tracer-icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/images/tracer-icon.png" />
     <link
       rel="preconnect"
       href="https://tracer-models-provider.web.cern.ch"
