--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       href="https://tracer-models-provider.web.cern.ch"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://tracer-xml-provider.web.cern.ch" crossorigin="anonymous" />
+    <link rel="preload" as="image" href="/assets/tracer-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="tracer-core development server" />
     <title>Tracer Core</title>
