--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="icon.png" />
+    <link rel="icon" type="image/svg+xml" href="icon.webp" />
     <link
       rel="preconnect"
       href="https://tracer-models-provider.web.cern.ch"
       crossorigin="anonymous"
     />
     <link rel="preconnect" href="https://tracer-xml-provider.web.cern.ch" crossorigin="anonymous" />
-    <link rel="preload" as="image" href="/assets/tracer-logo.png" />
+    <link rel="preload" as="image" href="/assets/tracer-logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="tracer-core development server" />
     <title>Tracer Core</title>
