--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Our Nuclear Engineering Center collaborates with CERN, specializing in 3D modeling and applications. We create immersive 3D models for various CERN teams, visualizing complex concepts. From particle detectors to accelerator designs, our experts bring ideas to life. Through advanced 3D applications, we enhance collaboration and data analysis, supporting particle physics research. Join us at the intersection of nuclear engineering and particle physics, as we drive innovation alongside CERN. Experience the transformative potential of 3D technology in unraveling the mysteries of the universe and shaping the future of scientific exploration."
+    />
+    <meta name="author" content="Irakli Kverenchkhiladze, Nino Zurashvili" />
+    <meta
+      name="keywords"
+      content="cern, 3d, models, vr, ar, visualisation, experiments, technology, particles, physics, 3d models, catia, threejs, arjs"
+    />
+
     <link rel="icon" type="image/svg+xml" href="icon.webp" />
     <link
       rel="preconnect"
@@ -9,13 +20,13 @@
       crossorigin="anonymous"
     />
     <link rel="preconnect" href="https://tracer-xml-provider.web.cern.ch" crossorigin="anonymous" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="tracer-core development server" />
+    <link rel="canonical" href="https://tracer-core.web.cern.ch/" />
+
     <title>Tracer Core</title>
   </head>
   <body className="dark" id="fullscreen">
     <div id="root"></div>
-    <div class="absolute z-0 w-full h-full" id="modal"></div>
+    <div class="absolute z-0 h-full w-full" id="modal"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
