--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="preconnect" href="https://tracer-xml-provider.web.cern.ch" crossorigin="anonymous" />
     <link rel="canonical" href="https://tracer-core.web.cern.ch/" />
 
-    <title>Development, Core</title>
+    <title>Tracer Core</title>
   </head>
   <body className="dark" id="fullscreen">
     <div id="root"></div>
