--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
       href="https://tracer-models-provider.web.cern.ch"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://tracer-xml-provider.web.cern.ch" crossorigin="anonymous" />
+    <link
+      rel="preconnect"
+      href="https://tracer-xml-provider.web.cern.ch"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      fetchpriority="high"
+      as="image"
+      href="/assets/tracer-logo.webp"
+      type="image/webp"
+    />
+
     <link rel="canonical" href="https://tracer-core.web.cern.ch/" />
 
     <title>Tracer Core</title>
