--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       rel="preload"
       fetchpriority="high"
       as="image"
-      href="/assets/tracer-logo.webp"
+      href="/assets/images/tracer-logo.webp"
       type="image/webp"
     />
 
