--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
       href="/assets/images/tracer-logo.webp"
       type="image/webp"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+        rel="stylesheet"
+      />
+    </noscript>
 
     <link rel="canonical" href="https://tracer-core.web.cern.ch/" />
 
