--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <link
       rel="preload"
-      fetchpriority="high"
+      fetchpriority="low"
       as="image"
       href="/assets/images/tracer-logo.webp"
       type="image/webp"
