--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <link rel="canonical" href="https://tracer-core.web.cern.ch/" />
 
-    <title>Tracer Core</title>
+    <title>Tracer</title>
   </head>
   <body className="dark" id="fullscreen">
     <div id="root"></div>
