--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       name="keywords"
       content="cern, 3d, models, vr, ar, visualisation, experiments, technology, particles, physics, 3d models, catia, threejs, arjs"
     />
-
+    <script
+      src="https://beamanalytics.b-cdn.net/beam.min.js"
+      data-token="84d04a28-0773-4b5e-a8b0-3c4299e5adfa"
+      async
+    ></script>
     <link
       rel="preconnect"
       href="https://tracer-models-provider.web.cern.ch"
